[package]
name = "skynet"
version = "0.1.0"
authors = ["cerebralcourt <0hhvxhv9@anonaddy.me>"]
edition = "2018"

[dependencies]
http = "0.2"
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
hyper-tls = "0.5"
mime = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
textnonce = "1"
tokio = { version = "1.4", features = ["rt", "macros"] }
