[package]
name = "skynet-rs"
version = "0.1.0"
authors = ["giraffekey <giraffekey@tutanota.com>"]
edition = "2018"
license = "MIT"
description = "Sia Skynet API"
repository = "https://github.com/giraffekey/skynet-rs"

[dependencies]
hex = "0.4"
http = "0.2"
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
hyper-tls = "0.5"
mime = "0.3"
mime_guess = "2"
rand = "0.8"
rust-crypto = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
textnonce = "1"
tokio = { version = "1.4", features = ["rt", "macros"] }
walkdir = "2"
#tus_async_client = "0.1.0"
tus_async_client = {git = "https://github.com/parture-org/tus_async_client"}
reqwest = "0.11"